--- a/Website/Content/Site.css
+++ b/Website/Content/Site.css
@@ -3,6 +3,14 @@
     padding-bottom: 20px;
 }
 
+body {
+    background-color: #f9f9f9;
+}
+body > .navbar:first-child{
+    background-color: #fff;
+    box-shadow: 0 0 4px 0 #ececec;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -21,4 +29,59 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+
+.card{
+    position: relative;
+    background-color: white;
+    box-shadow: 0 0 8px 4px #ddd;
+    border-radius: 5px;
+}
+.card-content{
+    padding: 8px 10px;
+}
+.card-toolbar{
+    position:absolute;
+    top: 18px;
+    right: 4px;
+}
+.card-toolbar > .label{
+    color: #555;
+    font-size: 10px;
+    border: 1px solid #ececec;
+    border-radius: 10px;
+    font-weight: 400;
+}
+.panel-heading > .panel-content{
+    color: black;
+    background-color: #f5f5f5;
+    padding: 4px 8px;
+    border-radius: 12px;
+    margin-left: 20px;
+    margin-top: 4px;
+    position: relative;
+}
+.panel-heading > .panel-content-new{
+    color: black;
+    background-color: #fff;
+    padding: 4px 8px;
+    border-radius: 8px;
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 6px;
+}
+
+.panel-content > .panel-toolbar{
+    position:absolute;
+    top: 2px;
+    right: 4px;
+}
+
+.panel-content > .panel-toolbar > .label{
+    color: #999;
+    font-size: 9px;
+    border: 1px solid #999;
+    border-radius: 10px;
+    font-weight: 400;
 }
