--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -2,10 +2,14 @@
     ViewBag.Title = "Home Page";
 }
 
+    <a href="@Url.Action("Create","Articles")" class="btn btn-primary btn-lg">
+        Create Article
+    </a>
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p></p>
 </div>
 
 <div class="row">
