--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNet.Identity
+@using Website.Models
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,10 +8,12 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,15 +21,50 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Article Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        @Html.ActionLink("Home", "Index", "Home")
+                        @Html.ActionLink("Feed", "Index", "Articles")
                     </li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
+                        || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+                        || User.IsInRole(Website.Models.Constants.UserRoles.Admin) 
+                        || LayerBao.ArticlesBao.MyArticlesCount(User.Identity.GetUserId()) == 0)
+                    {
+                        <li>
+                            @Html.ActionLink("Post Article", "Create", "Articles")
+                        </li>
+                    }
+                    <li>@Html.ActionLink("My Articles", "MyArticles", "Articles")</li>
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+                        || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li>@Html.ActionLink("Reviewer Articles", "ReviewerArticles", "Articles")</li>
+                    }
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
+                        || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+                        || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li>@Html.ActionLink("Published Articles", "PublishedArticles", "Articles")</li>
+                    }
+
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                Admin
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
+                                <li>@Html.ActionLink("New Articles", "NewArticles", "Articles")</li>
+                                <li>@Html.ActionLink("Articles Ready To Publish", "ArticlesWithReviews", "Articles")</li>
+                            </ul>
+                        </li>
+                    }
+                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -45,5 +84,14 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script>
+        $(document).ready(function () {
+            $("[loc-ref]").each(function () {
+                $(this).click(function () {
+                    location.href = $(this).attr("loc-ref");
+                })
+            })
+        })
+    </script>
 </body>
 </html>
