--- a/Website/Views/UsersAdmin/Index.cshtml
+++ b/Website/Views/UsersAdmin/Index.cshtml
@@ -5,7 +5,7 @@
     var roles = LayerBao.UserBao.GetRolesDto(null);
 }
 
-
+<br /><br />
 <div class="col-md-12">
     <div class="card">
         @*<div class="card-header card-header-icon" data-background-color="purple">
@@ -13,23 +13,20 @@
         </div>*@
         <div class="card-content">
             <h4 class="card-title">@ViewBag.Title</h4>
-            <div class="toolbar">
+            @*<div class="toolbar">
                 <p>
                     @Html.ActionLink("Create New", "Create")
                 </p>
-            </div>
+            </div>*@
             <div class="material-datatables">
                 <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width: 100%">
                     <thead>
                     <tr>
-                        @*<th>
-                            @Html.DisplayNameFor(model => model.PersonName)
-                        </th>*@
                         <th>
-                            @Html.DisplayNameFor(model => model.UserName)
+                            @Html.DisplayNameFor(model => model.Name)
                         </th>
                         <th>
-                            Email Verified
+                            @Html.DisplayNameFor(model => model.UserName)
                         </th>
                         <th>
                             Roles
@@ -45,14 +42,11 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            @*<td>
-                                @Html.DisplayFor(modelItem => item.PersonName)
-                            </td>*@
                             <td>
-                                @Html.DisplayFor(modelItem => item.UserName)
+                                @Html.DisplayFor(modelItem => item.Name)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.EmailConfirmed)
+                                @Html.DisplayFor(modelItem => item.UserName)
                             </td>
                             <td>
                                 @(item.Roles.Count > 0 ? item.Roles.Select(r => roles.FirstOrDefault(rr=> rr.Id == r.RoleId)?.Name).Aggregate((c, n) => c + ", " + n) : "Default")
@@ -72,7 +66,14 @@
     </div>
     <!-- end card -->
 </div>
-
+<br /><br />
+<br /><br />
+<br /><br />
+<br /><br />
+<br /><br />
+<br /><br />
+<br /><br />
+<br /><br />
 @section scripts{
     <!-- DataTables.net Plugin -->
     <script src="/Content/assets/js/jquery.datatables.js"></script>
