Project Update By Wajiha

--- a/Website/Views/Articles/Index.cshtml
+++ b/Website/Views/Articles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LayerDb.Models.Article>
+﻿@model IEnumerable<LayerDb.Models.ArticleManagerView>
 @using Microsoft.AspNet.Identity
 @using Website.Models
 
