--- a/Website/Views/Articles/_SingleArticle.cshtml
+++ b/Website/Views/Articles/_SingleArticle.cshtml
@@ -1,4 +1,5 @@
-﻿@model LayerDb.Models.Article
+﻿@model LayerDb.Models.ArticleManagerView
+
 @using Microsoft.AspNet.Identity
 @{
     var article = Model;
@@ -9,7 +10,7 @@
         <div class="card-toolbar">
             <label class="label">
                 <i class="fa fa-user"></i>
-                @article.AspNetUser.Name
+                @article.CreatedByName
             </label>
             <label class="label">
                 <i class="fa fa-calendar"></i>
@@ -17,14 +18,15 @@
             </label>
             <br />
             <label class="label label-info">
-                @(!article.IsReadyToReview ? "Not Yet Reviewable" : article.ArticleReviews.Count() == 0 ? "Ready for Review" : article.IsReadyToPublish ? "Published" : "Reviewed")
+                @(!article.IsReadyToReview ? "Not Yet Reviewable" : article.ReviewCount == 0 ? "Ready for Review" : article.IsReadyToPublish ? "Published" : "Reviewed")
             </label>
         </div>
         <div class="card-content">
+            
             <a href="@Url.Action("Details","Articles", new { id = article.Id})"><h4>@article.Title</h4></a>
             <p>@article.SubTitle</p>
         </div>
-        <div class="card-footer" style="padding: 8px;padding-bottom:12px;">
+     @*  <div class="card-footer" style="padding: 8px;padding-bottom:12px;">
             @if (article.CreatedBy == User.Identity.GetUserId())
             {
                 <a class="btn btn-info btn-sm" href="@Url.Action("Create","ArticleBlocks", new { id = article.Id})">Add Block</a>
@@ -44,7 +46,8 @@
                 <a class="btn btn-info btn-sm" href="@Url.Action("MarkArticleForPublish","Articles", new { id = article.Id})">Publish Article</a>
             }
         </div>
-        @if (article.ArticleReviews != null && article.ArticleReviews.Count() > 0)
+         *@
+        @*@if (article.ArticleReviews != null && article.ArticleReviews.Count() > 0)
         {
             <div class="card-footer">
                 <div class="panel-info">
@@ -52,44 +55,18 @@
                         <h5>Review</h5>
                         @foreach (var review in article.ArticleReviews)
                         {
+                            
                             <blockquote>
                                 @review.Description
                             </blockquote>
-                            <span style="font-style:italic">&nbsp;&nbsp; by @review.AspNetUser.Name</span>
+                            //<span style="font-style:italic">&nbsp;&nbsp; by @review.AspNetUser.Name</span>
                         }
                     </div>
                 </div>
             </div>
-        }
+        }*@
         
 
     </div>
-    <div class="card" style='margin-left: @(article.ArticleReviews != null && article.ArticleReviews.Count() > 0 ? "3rem" : "0rem" );'>
-        @foreach (var block in article.ArticleBlocks)
-            {
-            <div class="@(block.BlockType.Name == "Fact" ? "panel-success" : block.BlockType.Name == "Analysis" ? "panel-warning" : block.BlockType.Name == "Assumption" ? "panel-danger" : "panel-info" )">
-                <div class="panel-heading">
-                    <span>@block.Description</span>
-                    @foreach (var comment in block.ArticleBlocksComments)
-                {
-                        <div class="panel-content">
-                            <div class="panel-toolbar">
-                                <label class="label">
-                                    <i class="fa fa-user"></i>
-                                    @comment.AspNetUser.Name
-                                </label>
-
-                            </div>
-                            @comment.Description
-                        </div>
-                    }
-                    <div class="panel-content-new">
-                        <a href="@Url.Action("Create", "ArticleBlocksComments", new { id = block.Id})">Write a new comment !!</a>
-                    </div>
-                </div>
-            </div>
-        }
     </div>
-
-</div>
-
+   
