--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -22,53 +22,57 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Article Manager", "Index", "ArticleManagerViews", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Add Article", "Create", "Articles", new { area = "" }, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("Add Article", "Create", "Articles", new { area = "" }, new { @class = "navbar-brand" })*@
+
             </div>
             <div class="navbar-collapse collapse">
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">
+                    <li>
+                        @Html.ActionLink("Feed", "Index", "Articles")
+                    </li>
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
+            || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+            || User.IsInRole(Website.Models.Constants.UserRoles.Admin)
+            || LayerBao.ArticlesBao.MyArticlesCount(User.Identity.GetUserId()) == 0)
+                    {
                         <li>
-                            @Html.ActionLink("Feed", "Index", "Articles")
+                            @Html.ActionLink("Post Article", "Create", "Articles")
                         </li>
-                        @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
-                || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
-                || User.IsInRole(Website.Models.Constants.UserRoles.Admin)
-                || LayerBao.ArticlesBao.MyArticlesCount(User.Identity.GetUserId()) == 0)
-                        {
-                            <li>
-                                @Html.ActionLink("Post Article", "Create", "Articles")
-                            </li>
-                        }
-                        <li>@Html.ActionLink("My Articles", "MyArticles", "Articles")</li>
-                        @if (User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
-                || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
-                        {
-                            <li>@Html.ActionLink("Reviewer Articles", "ReviewerArticles", "Articles")</li>
-                        }
-                        @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
-                || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
-                || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
-                        {
-                            <li>@Html.ActionLink("Published Articles", "PublishedArticles", "Articles")</li>
-                        }
+                    }
+                    <li>@Html.ActionLink("My Articles", "MyArticles", "Articles")</li>
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+            || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li>@Html.ActionLink("Reviewer Articles", "ReviewerArticles", "Articles")</li>
+                    }
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Reader)
+            || User.IsInRole(Website.Models.Constants.UserRoles.Reviewer)
+            || User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li>@Html.ActionLink("Published Articles", "PublishedArticles", "Articles")</li>
+                    }
 
-                        @if (User.IsInRole(Website.Models.Constants.UserRoles.Admin))
-                        {
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    Admin
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
-                                    <li>@Html.ActionLink("New Articles", "NewArticles", "Articles")</li>
-                                    <li>@Html.ActionLink("Articles Ready To Publish", "ArticlesWithReviews", "Articles")</li>
-                                </ul>
-                            </li>
-                        }
+                    @if (User.IsInRole(Website.Models.Constants.UserRoles.Admin))
+                    {
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                Admin
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Databases", "Index", "Tags")</li>
+                                <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
+                                <li>@Html.ActionLink("Articles Management", "Index", "ArticleManagerViews")</li>
+                                <li>@Html.ActionLink("New Articles", "NewArticles", "Articles")</li>
+                                <li>@Html.ActionLink("Articles Ready To Publish", "ArticlesWithReviews", "Articles")</li>
+                            </ul>
+                        </li>
 
-                    </ul>
+                    }
+
+                </ul>
                 }
                 @Html.Partial("_LoginPartial")
             </div>
