--- a/Website/Views/UsersAdmin/Index.cshtml
+++ b/Website/Views/UsersAdmin/Index.cshtml
@@ -21,44 +21,61 @@
             <div class="material-datatables">
                 <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width: 100%">
                     <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.UserName)
-                        </th>
-                        <th>
-                            Roles
-                        </th>
-                        <th>
-                            Actions
-                        </th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-
-                    @foreach (var item in Model)
-                    {
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UserName)
-                            </td>
-                            <td>
-                                @(item.Roles.Count > 0 ? item.Roles.Select(r => roles.FirstOrDefault(rr=> rr.Id == r.RoleId)).Where(r => r != null).Select(r => r.Name).Aggregate((c, n) => c + ", " + n) : "Default")
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.UserName)
+                            </th>
+                            <th>
+                                Roles
+                            </th>
+                            <th>
+                                Actions
+                            </th>
                         </tr>
+                    </thead>
+                    @if (Model != null)
+                    {
+
+                        <tbody>
+
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.UserName)
+                                    </td>
+                                    <td>
+                                        @{
+                                            var userRoles = LayerBao.UserBao.GetRoles(item.Email);
+                                        }
+                                        @if (userRoles == null || userRoles.Count == 0)
+                                        {
+                                            <span>Default</span>
+                                        }
+                                        else if (userRoles.Count == 1)
+                                        {
+                                            @userRoles.FirstOrDefault()
+                                        }
+                                        else
+                                        {
+                                            @userRoles.Aggregate((c,n) => c + "," + n)
+                                        }
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
                     }
-                    </tbody>
                 </table>
             </div>
         </div>
